Añadir musica en PantallaEjercicio
Añadi la opcion para que mientras el usuario haga los ejercicios mostrados en pantalla, puede poner musica de fondo.