@@ -17,6 +17,44 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<version>8.0.33</version>
 		</dependency>
-	</dependencies>
+
+		 <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-controls</artifactId>
+        <version>20.0.1</version>
+    </dependency>
+   <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-media -->
+<dependency>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-media</artifactId>
+    <version>20.0.1</version>
+</dependency>
+  <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
+<dependency>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-controls</artifactId>
+    <version>20.0.1</version>
+</dependency>
+</dependencies>
+
+
+	<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+            <configuration>
+                <source>18</source> <!-- Ajusta la versión de Java que estás utilizando -->
+                <target>18</target> <!-- Ajusta la versión de Java que estás utilizando -->
+                <compilerArgs>
+                    <arg>--add-modules</arg>
+                    <arg>javafx.controls,javafx.media</arg>
+                </compilerArgs>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+
 
 </project>
